--- a/sass-js/index.html
+++ b/sass-js/index.html
@@ -160,7 +160,7 @@
   <section class="container">
     <div class="seccionCierre colaboradores">
       <article>
-        <h3>Organizaciones que nos acompañan</h3>
+        <h3>Organizaciones con las que trabajamos</h3>
         <div id="carouselLogos" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="0" class="active"
