--- a/sass-js/social.html
+++ b/sass-js/social.html
@@ -134,7 +134,7 @@
 
     <section class="bgFrame colaboradores">
       <article class="container shadowB">
-        <h3>Organizaciones que apoyan</h3>
+        <h3>Organizaciones a las que apoyamos</h3>
 
         <div id="carouselLogos" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
