--- a/sass-js/index.html
+++ b/sass-js/index.html
@@ -168,6 +168,7 @@
             <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="1" aria-label="Diapo 2"></button>
             <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="2" aria-label="Diapo 3"></button>
             <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="3" aria-label="Diapo 4"></button>
+            <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="4" aria-label="Diapo 5"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -186,6 +187,7 @@
                 </div>
               </div>
             </div>
+
             <div class="carousel-item">
               <div class="wrapper">
                 <div class="item">
@@ -227,11 +229,27 @@
             <div class="carousel-item">
               <div class="wrapper">
                 <div class="item">
+                  <img alt="logo Fundación Tzedaká Uruguay" src="./assetts/logos/logo_FundacionTzedaka.png"
+                  loading="lazy" />
+                </div>
+                <div class="item">
                   <img alt="logo Centro Dionisio Díaz" src="./assetts/logos/logo_DionisioDiaz.png"
                   loading="lazy" />
                 </div>
+                <div class="item">
+                  <img alt="logo Fundación Los Pinos" src="./assetts/logos/logo_FundacionLosPinos.png"
+                  loading="lazy">
+                </div>
+                <div class="item noShow"></div>
+              </div>
+            </div>
+            
+            <div class="carousel-item">
+              <div class="wrapper">
                 <div class="item"><img alt="logo Uniendo" src="./assetts/logos/logo_Uniendo.png" loading="lazy"></div> 
                 <div class="item"><img alt="logo Nuestro Camino" src="./assetts/logos/logo_NuestroCamino.png" loading="lazy"></div>
+                <div class="item"><img alt="logo Movimiento Tacurú Salesianos" src="./assetts/logos/logo_MovimientoTacuru.png"
+                  loading="lazy"></div>
                 <div class="item noShow"></div>
               </div>
             </div>
