--- a/sass-js/trayectorias.html
+++ b/sass-js/trayectorias.html
@@ -335,21 +335,31 @@
                 <div class="item">
                   <img alt="logo Gurises Unidos" src="./assetts/logos/logo_GurisesUnidos.png" loading="lazy">
                 </div>
-                <div class="item noShow"></div>
+                <div class="item">
+                  <img alt="logo Centro Dionisio Díaz" src="./assetts/logos/logo_DionisioDiaz.png"
+                  loading="lazy" />
+                </div>
               </div>
             </div>
             
             <div class="carousel-item">
               <div class="wrapper">
                 <div class="item">
-                  <img alt="logo Centro Dionisio Díaz" src="./assetts/logos/logo_DionisioDiaz.png"
+                  <img alt="logo Fundación Tzedaká Uruguay" src="./assetts/logos/logo_FundacionTzedaka.png"
                   loading="lazy" />
                 </div>
-                <div class="item noShow"></div>
                 <div class="item">
-                  <img alt="logo Centro Los Zorzales" src="./assetts/logos/logo_CentroLosZorzales.png" loading="lazy">
+                  <img alt="logo Centro Los Zorzales" src="./assetts/logos/logo_CentroLosZorzales.png"
+                  loading="lazy">
                 </div>
-                <div class="item noShow"></div>
+                <div class="item">
+                  <img alt="logo Fundación Los Pinos" src="./assetts/logos/logo_FundacionLosPinos.png"
+                  loading="lazy">
+                </div>
+                <div class="item">
+                  <img alt="logo Movimiento Tacurú Salesianos" src="./assetts/logos/logo_MovimientoTacuru.png"
+                  loading="lazy">
+                </div>
               </div>
             </div>
           </div>
