--- a/sass-js/sin_limites.html
+++ b/sass-js/sin_limites.html
@@ -125,7 +125,7 @@
           <div>
             <img src="../assetts/iconHand/icons-star-100.png" alt="" />
             <h3>28</h3>
-            <p>personas incluidas a través del programa</p>
+            <p>28 personas fueron incluidas desde el inicio del programa</p>
           </div>
           <div>
             <img src="../assetts/iconHand/icons-laying-bricks-100.png" alt="" />
