--- a/sass-js/index.html
+++ b/sass-js/index.html
@@ -127,7 +127,7 @@
         <div class="iconsInfo">
           <div class="iconFlag">
             <img src="./assetts/iconHand/icons-star-100.png" alt="" />
-            <p>28 personas incluidas</p>
+            <p>28 personas fueron incluidas desde el inicio del programa</p>
           </div>
           <div class="iconFlag">
             <img src="./assetts/iconHand/icons-laying-bricks-100.png" alt="" />
